Fix: Flickering issues when switching tab

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,6 +121,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html, body {
+    height: 100%;
+    overflow: hidden;
+  }
   body {
     @apply bg-muted/40 text-foreground;
   }
